bugfix: debug message panel needs z-index to be on top

--- a/css/scss/lizzy_basics.scss
+++ b/css/scss/lizzy_basics.scss
@@ -665,14 +665,15 @@ pre {
 #lzy-log {
 	height: 10vh;
 	background: #edd;
-	margin: 20px 0 0 0;
+	margin: 0;
 	padding: 10px 20px;
 	overflow: auto;
 	border: 1px solid red;
 	position: fixed;
-	width: calc(100vw - 42px);
+	width: 100vw;
 	left: 0;
 	bottom: 0;
+	z-index: 9999;
 }
 #lzy-log h1 {
 	font-size: 11pt;
